--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
     <body>
        <div> <!-- navigation bar -->
           <body class="landing">
-          <nav> <!-- nav bar -->
           <nav class="navbar"> <!-- nav bar -->
-             <img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo" class="logo">
+            <a href="index.html" class="logo">
+              <img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo">
+            </a>
+            <div class="links-container">
+              <a href="collection.html" class="navbar-link">collection</a>
+            </div>
+          </nav>
           </nav>
         </div>
         <div>
