--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </section>
         </div>
         <div> <!-- selling points -->
-              <section class="selling-points container clearfix"> <!-- selling points -->
+          <section class="selling-points container clearfix"> <!-- selling points -->
                   <div class="point column third">
                     <span class="ion-music-note"></span>
                     <h5 class="point-title">Choose your music</h5>
@@ -46,7 +46,9 @@
                       <p class="point-description">Listen to your music on the go. This streaming service is available on all mobile platforms.</p>
                   </div>
         </div>
+          </section>
         <script src="scripts/utilities.js"></script>
         <script src="scripts/landing.js"></script>
+        <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
       </body>
 </html>
