--- a/collection.html
+++ b/collection.html
@@ -22,5 +22,6 @@
       <section class="album-covers container clearfix">
       </section>
     <script src="scripts/collection.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     </body>
 </html>
